--- a/publications.html
+++ b/publications.html
@@ -7,13 +7,27 @@
 
 <body>
     <h1>Publications</h1>
+    <h2>2022</h2>
+
+    <p><b><a href="https://ieeexplore.ieee.org/abstract/document/9700764"> Evaluating Quantitative Metrics of Tone-mapped Images</b></a><br>
+        IR Khan, TA Alotaibi, A Siddiq, F Bourennani<br>
+        IEEE Transactions on Image Processing, 31, 1751-1760
+        <button> <a href="https://github.com/ishtiaqrasool/2022-TIP" target="_blank">Code</a></a></button>
+    </p>
+    <p><a href="https://link.springer.com/article/10.1007/s11760-022-02159-6">HDR image encoding using a companding-based nonlinear quantization approach without metadata</a><br>
+        A Siddiq, J Ahmed, MH Alkinani, IR Khan<br>
+        Signal, Image and Video Processing (Springer)<br>
+    </p>
+
+
+
     <h2>2021</h2>
 
     <p><b>Assessing the Performance of Image Quality Assessment Metrics</b><br>
         T Alotaibi, F. Bourennani, IR Khan<br>
         IEEE International Workshop on Multimedia Signal Processing (MMSP) </p>
 
-    <p><b>Mobile Registration Number Plate Recognition Using Artificial Intelligence</b>
+    <p><b>Mobile Registration Number Plate Recognition Using Artificial Intelligence</b><br>
         STA Ali, AH Usama, IR Khan, MM Khan, A Siddiq
         IEEE International Conference on Image Processing (ICIP), 944-948 </p>
 
