--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
         IEEE Transactions on Image Processing, 31, 1751-1760
         <button> <a href="https://github.com/ishtiaqrasool/2022-TIP" target="_blank">Code</a></a></button>
     </p>
-    <p><a href="https://link.springer.com/article/10.1007/s11760-022-02159-6">HDR image encoding using a companding-based nonlinear quantization approach without metadata</a><br>
+    <p><a href="https://link.springer.com/article/10.1007/s11760-022-02159-6" target="_blank">HDR image encoding using a companding-based nonlinear quantization approach without metadata</a><br>
         A Siddiq, J Ahmed, MH Alkinani, IR Khan<br>
         Signal, Image and Video Processing (Springer)<br>
     </p>
