--- a/home.html
+++ b/home.html
@@ -27,7 +27,13 @@
             <td>
                 <img src="images/Picture2.jpeg" width=100 height=128 style="float: right ;margin:50px">
             </td>
-<td> <p> Our work on evaluation of Tone-mapped Image quality Assessment metrics has been accepted in <b> IEEE Transactions in Image Processing</b>. </p>
+            <td>
+                <p> Our work on evaluation of Tone-mapped Image quality Assessment metrics has been published in <b>
+                        IEEE Transactions in Image Processing</b> (1 Feb 2022). <br><br>            
+
+            Our work on HDR Encoding without using companding has been pubished in <b>Signal Image and Video Processing</b> (22 Feb 2022).<br>
+            </td>
+
         </tr>
     </table>
 
@@ -40,7 +46,7 @@
 
     <h2>Office Hours</h2>
     <p>Monday, Wednesday (By appointment through email)</p>
-    
+
     <h2>Previous Positions</h2>
     <p> 2012-2016: King Abdulaziz University<br>
         2008-2012: Institute for Incocomm Research, A*STAR. Singapore<br>
